fixed some layout issues

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -129,13 +129,42 @@ a {
     grid-template-columns: 1fr;
 }
 #page-current {
-    display: block;
-    user-select: none;
-    text-align: center;
-    margin: 40px 0;
-    font-size: 20px;
+    align-items: center;
+    display: flex;
     font-weight: bold;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 40px;
+    text-align: center;
+    width: 100%;
+    user-select: none;
+}
+#page-current .current {
+    border-radius: 5px;
     color: var(--theme-primary-color);
+    display: inline-block;
+    height: 35px;
+    line-height: 35px;
+    margin: 0 7px;
+    padding: 5px;
+    width: 35px;
+    font-size: 20px;
+}
+#page-current .page-num,
+#page-current .page-omit {
+    border-radius: 5px;
+    display: inline-block;
+    height: 35px;
+    line-height: 35px;
+    margin: 0 7px;
+    padding: 5px;
+    width: 35px;
+    user-select: none;
+    color: var(--theme-secondary-color);
+}
+#page-current .page-num:hover {
+    background: var(--theme-secondary-color);
+    color: var(--surface-color);
 }
 
 @media (max-width: 1200px) {
